@@ -1,6 +1,7 @@
 package org.molgenis.armadillo;
 
-import java.util.Arrays;
+import java.util.List;
+import org.molgenis.armadillo.config.DatashieldProfileManager;
 import org.molgenis.armadillo.metadata.ArmadilloMetadataService;
 import org.molgenis.armadillo.storage.ArmadilloStorageService;
 import org.springframework.context.annotation.Bean;
@@ -33,11 +34,16 @@ public class TestSecurityConfig extends WebSecurityConfigurerAdapter {
   public UserDetailsService userDetailsService() {
     GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_SU");
     User userDetails =
-        new User("bofke", "bofke", Arrays.asList(authority)) {
+        new User("bofke", "bofke", List.of(authority)) {
           public String getEmail() {
             return "bofke@email.com";
           }
         };
-    return new InMemoryUserDetailsManager(Arrays.asList(userDetails));
+    return new InMemoryUserDetailsManager(List.of(userDetails));
+  }
+
+  @Bean
+  public DatashieldProfileManager datashieldProfileManager() {
+    return new DatashieldProfileManager();
   }
 }
